style.css
/*
 Theme Name:   Zangão Games Theme
 Theme URI:    http://example.com/zangao-games/
 Description:  Zangão Games Theme
 Author:       kaiten
 Author URI:   github.com/shoxton
 Version:      1.0.0
 License:      GNU General Public License v2 or later
 License URI:  http://www.gnu.org/licenses/gpl-2.0.html
 Tags:         simple, objective, quick
 Text Domain:  zangao-games
*/

* {
    box-sizing: border-box;
    transition: all .2s ease;
    -webkit-transition: all .2s ease;
    -moz-transition:    all .2s ease;
    -ms-transition:     all .2s ease;
    -o-transition:      all .2s ease;
}

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, font, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td {
    border: 0;
    font-family: inherit;
    font-size: 100%;
    font-style: inherit;
    font-weight: inherit;
    margin: 0;
    outline: 0;
    padding: 0;
    vertical-align: baseline;
}
html {
    font-size: 100%; /* Corrects text resizing oddly in IE6/7 when body font-size is set using em units http://clagnut.com/blog/348/#c790 */
    overflow-y: scroll; /* Keeps page centred in all browsers regardless of content height */
    -webkit-text-size-adjust: 100%; /* Prevents iOS text size adjust after orientation change, without disabling user zoom */
    -ms-text-size-adjust: 100%; /* www.456bereastreet.com/archive/201012/controlling_text_size_in_safari_for_ios_without_disabling_user_zoom/ */
}
body {
    background: #fff;
}
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
nav,
section {
    display: block;
}
ol, ul {
    list-style: none;
    margin: 0!important;
    padding: 0;
}
table { /* tables still need 'cellspacing="0"' in the markup */
    border-collapse: separate;
    border-spacing: 0;
}
caption, th, td {
    font-weight: normal;
    text-align: left;
}
blockquote:before, blockquote:after,
q:before, q:after {
    content: "";
}
blockquote, q {
    quotes: "" "";
}
a:focus {
    outline: thin dotted;
}
a:hover,
a:active { /* Improves readability when focused and also mouse hovered in all browsers people.opera.com/patrickl/experiments/keyboard/test */
    outline: 0;
}
a img {
    border: 0;
}


/* General style */

img.alignright { float: right; margin: 0 0 1em 1em; }
img.alignleft { float: left; margin: 0 1em 1em 0; }
img.aligncenter { display: block; margin-left: auto; margin-right: auto; }
.alignright { float: right; }
.alignleft { float: left; }
.aligncenter { display: block; margin-left: auto; margin-right: auto; }

body {
    font-family: 'Roboto', sans-serif;
}

h1,h2,h3,h4,h5,a {
    font-family: 'Titillium Web', sans-serif!important;
    font-weight: bold!important;
}

h1,h2,h3,h4 {
    color: #383838;
    text-transform: uppercase;
}

p {
    font-family: 'Roboto', sans-serif;
}

h1 {font-size: 48px;}
h2 {font-size: 36px;}
h3 {font-size: 24px;}
h4 {font-size: 18px;}
h5, a {font-size: 16px;}
p {font-size: 16px; color: #333;line-height: 1.6471}

@media screen and (max-width: 992px) {
    h2 {font-size: 24px!important;}
}

@media screen and (max-width: 575px) {
    h1 {
        font-size: 36px!important;
    }
}

img {
    height: auto;
    max-width: 100%;
}

button {
    background: #E94B3C;
    padding: 10px 25px;
    border: none;
    color: #fff;
    text-shadow: 0 2px 3px rgba(0,0,0,.1);
    line-height: 1;
    text-transform: uppercase!important;
    transition: .2s ease;
    font-weight: bold;
    cursor: pointer;
}

.yt-button {
    padding-top: 6%;
}

.yt-button .button-img {
    background: rgb(230, 230, 230);
    border-radius: 100%;
    overflow: hidden;
    width: 120px;
    height: 120px;
    margin: auto;
    border: 5px solid #fff;
    box-shadow: inset 0 0 30px rgba(0,0,0,.2),
                0 0 30px rgba(0,0,0,.2);
}

.yt-button .button-action {
    margin-top: -40px;
    width: 100%;
    text-align: center;
}

.button-custom {
    border-radius: 5px;
    font-weight: bold;
    box-shadow: 15px 15px 30px rgba(0,0,0,.1),
                -15px 15px 30px rgba(0,0,0,.1);
}

.button-custom:hover {
    box-shadow: 30px 15px 45px rgba(0,0,0,.1),
                -30px 15px 45px rgba(0,0,0,.1);
}

button:hover {
    background: #d92919;
}

.horizontal-menu ul {
    display: flex;
    flex-wrap: wrap;
}

.horizontal-menu ul li {
    margin-right: 20px;
}

.ellipsis {
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    line-height: 1.3;     /* fallback */
    max-height: 72px;      /* fallback */
    -webkit-line-clamp: 2; /* number of lines to show */
    -webkit-box-orient: vertical;
}

.condense {
    padding: 20px;
}

@media screen and (max-width: 575px) {
    .condense {
        padding: 30px 0;
    }
}

.iframe-card {
    background: #fff;
    box-shadow: 0 4px 8px rgba(0,0,0,.1);
    border: 5px solid #fff;
}

@media screen and (max-width: 1024px) {
    .iframe-card {
        margin-bottom: 15px;
    }
}

.iframe-card .iframe-text {
    padding: 5px 15px 10px;
}

.iframe-card .iframe-text a:last-child {
    color: #E94B3C;
}

.iframe-card .iframe-text a:first-child {
    color: #424242;
    text-decoration: none;
}

.iframe-card .iframe-text a:first-child:hover {
    color: #000;
}

.iframe-card .iframe-text h4 {
    font-weight: bold;
    text-transform: uppercase;
    font-size: 18px;

}

.wrapper {
    padding-top: 5%;
    padding-bottom: 5%; 
}

.no-results {
    padding: 20px;
    text-align: center;
    background: #fff;
}

.no-results p {
    font-weight: bold;
    font-size: 24px;
    line-height: 1;
}

.no-results span {
    font-size: 14px;
    color: #a1a1a1;
    line-height: 1;
}

.no-results .sad-face {
    font-size: 200px;
    color: #a1a1a1;
    text-align: center;
}
/* ... */

